--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "mockjs": "^1.0.1-beta3",
+    "music-metadata": "^4.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1",
-    "id3js": "^1.1.3"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
