--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mockjs": "^1.0.1-beta3",
     "music-metadata": "^4.1.1",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
